# zentickr-yahoo-query-mcp

./: .gitignore  ACTIVE.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/: gates.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: quality.yml
docs/audit/: 2026-07-17-v0.1.0-audit.md
docs/superpowers/plans/: 2026-07-17-zentickr-v0.1.0-release.md
docs/superpowers/specs/: 2026-07-17-zentickr-v0.1.0-release-design.md
src/zentickr/: __init__.py  __main__.py  server.py
tests/: test_serialization.py  test_tools.py
