[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zentickr"
version = "0.1.0"
description = "Yahoo Finance MCP server - stock market data tools for AI assistants, powered by yahooquery"
authors = [{ name = "Chintan Diwakar", email = "chintan.diwakar012@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "yahoo-finance", "stocks", "finance", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.9.0",
    "yahooquery>=2.4.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/chintan-diwakar/zentickr-yahoo-query-mcp"
Issues = "https://github.com/chintan-diwakar/zentickr-yahoo-query-mcp/issues"
Changelog = "https://github.com/chintan-diwakar/zentickr-yahoo-query-mcp/blob/main/CHANGELOG.md"

[project.scripts]
zentickr = "zentickr.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["zentickr*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
